--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <div class="piece" id="queen">♛</div>
                 <div class="piece" id="king">♚</div>
                 <div class="piece" id="pawn">♟<div>
-            </div>
+                    <div class="piece" id="pawn">♟<div>
+
+                </div>
         </section>
 
         <section id="courses">
