--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="checkmatex-logo.svg" alt="CheckMateX Logo" class="logo-img">
+                <img src="/images/cmx-logo.webp" alt="CMX Logo" class="logo-img">
                 <span>CheckMateX</span>
             </div>
+            
             <ul>
                 <li><a href="learning-options.html">Learn</a></li>
                 <li><a href="#courses">Courses</a></li>
@@ -38,10 +39,8 @@
                 <div class="piece" id="bishop">♝</div>
                 <div class="piece" id="queen">♛</div>
                 <div class="piece" id="king">♚</div>
-                <div class="piece" id="pawn">♟<div>
-                    
-
-                </div>
+                <div class="piece" id="pawn">♟</div>
+            </div>
         </section>
 
         <section id="courses">
