profile and login page and color changes

--- a/learning-options.html
+++ b/learning-options.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="checkmatex-logo.svg" alt="CheckMateX Logo" class="logo-img">
+                <img src="/images/cmx-logo.webp" alt="CheckMateX Logo" class="logo-img">
                 <span>CheckMateX</span>
             </div>
             <ul>
